# fsml

./: .clangd  .gitignore  CMakeLists.txt  NOTES.md  README.md  fsml.cpp  ops.py  setup.py  test.py  test.sh
fsml/: CMakeLists.txt  buffer.cpp  buffer.h  graph.cpp  graph.h  operation.cpp  operation.h  opps.cpp  ops.cpp  ops.h  tensor.cpp  tensor.h
fsml/backend/: CMakeLists.txt  hello.cu  hello.cuh  ops.cu  ops.cuh  tensor.cu  tensor.cuh
fsml/backend/codegen/: CMakeLists.txt  codegen.cpp
fsml/codegen/: CMakeLists.txt  codegen.cpp  codegen.h
fsml/tests/: CMakeLists.txt  buffer_test.cpp  ops_test.cpp  tensor_test.cpp
fsml/transforms/: CMakeLists.txt  broadcasting.cpp  broadcasting.h
python/: CMakeLists.txt  fsml.cpp  tensor.cpp
python/tests/: tensor_test.py  test.py
test/: ops.py
